<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/unos_fragment"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:theme="@style/Unos_Fragment"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:text="@string/UnosPR"
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </TextView>
    <Spinner
        android:layout_gravity="left"
        android:pointerIcon="arrow"
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="50dp" />
    <EditText
        android:inputType="text"
        android:id="@+id/naslov"
        android:hint="@string/Naslov"
        android:layout_width="match_parent"
        android:layout_height="80dp">

    </EditText>
    <EditText
        android:inputType="number"
        android:id="@+id/kolicina"
        android:hint="@string/Kolicina"
        android:layout_width="match_parent"
        android:layout_height="80dp">

    </EditText>
    <CheckBox
        android:text="Audio"
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="80dp">

    </CheckBox>
    <EditText
        android:id="@+id/opis"
        android:hint="@string/Opis"
        android:textAlignment="center"
        android:background="@drawable/edittextborder"
        android:layout_width="350dp"
        android:inputType="text"
        android:layout_height="200dp">

    </EditText>
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/btnMic"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_baseline_mic_24"/>

    <ImageView
        android:id="@+id/btnRecording"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/red_mic"
        android:visibility="gone"
        app:tint="@android:color/holo_red_light" />
    <Button
        android:id="@+id/unos_button"
        android:text="@string/DodajUListu"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="60dp">

    </Button>
</androidx.appcompat.widget.LinearLayoutCompat>