<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealGridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profil_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:alignmentMode="alignBounds"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/izmeni_profil_textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_columnSpan="2"
        android:text="@string/Izmena"
        android:textAlignment="center"
        android:textSize="30dp">

    </TextView>

    <ImageView
        android:src="@drawable/ic_baseline_attach_money_24_white"
        android:id="@+id/izmeni_image_profil"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </ImageView>
    <TextView
        android:textAlignment="center"
        android:id="@+id/izmeni_ime"
        android:text="@string/Profil_ime"
        android:textSize="30dp"
        android:theme="@style/login"
        android:layout_width="200dp"
        android:layout_height="100dp">

    </TextView>
    <EditText
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/izmeni_ime_value"
        android:textSize="30dp"
        android:layout_width="200dp"
        android:layout_height="100dp">

    </EditText>
    <TextView
        android:id="@+id/izmeni_prezime"
        android:textAlignment="center"
        android:text="@string/Profil_prezime"
        android:textSize="30dp"
        android:layout_width="200dp"
        android:layout_height="100dp">

    </TextView>
    <EditText
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/izmeni_prezime_value"
        android:textSize="30dp"
        android:layout_width="200dp"
        android:layout_height="100dp">

    </EditText>
    <TextView
        android:id="@+id/izmeni_banka"
        android:text="@string/Profil_banka"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="100dp">

    </TextView>
    <EditText
        android:id="@+id/izmeni_banka_value"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="100dp">

    </EditText>
    <Button
        android:textAlignment="center"
        android:id="@+id/sacuvaj"
        android:text="@string/Sacuvaj"
        android:layout_gravity="center"
        android:theme="@style/login"
        android:layout_width="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_height="wrap_content">

    </Button>


</com.google.android.material.circularreveal.CircularRevealGridLayout>
